changed the logo-type.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 #logo {
     position: absolute;
-    right: 52%;
+    right: 41.06%;
+    left: 41,27%;
     top: 21.76%;
     bottom: 71.17%;
 }
