changed the logo-type again

--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
 
 #logo {
     position: absolute;
-    right: 41.06%;
-    left: 41,27%;
+    left: 500px;
     top: 21.76%;
     bottom: 71.17%;
 }
