--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* RESET */
+
 * {
     margin: 0;
     padding: 0;
@@ -6,46 +8,65 @@
     list-style: none;
 }
 
-header img {
-    margin: 120px 0 70px  110px;
+/* BEGINNING */
+
+main, footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
-#username, 
-#password {
-    margin-top: 7px;
-    width: 227px;
-    height: 30px;
-    padding-left: 10px;
-
-    background: #F7F7F7;
-    box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.09);
-    border-radius: 7px;
-
-    font: 700 15px 'Raleway', sans-serif, #696969;
-    color: #000000;
+.logo {
+    display:block;
+    margin: 5rem auto 5rem auto;
 }
 
-.inputs {
-    margin-left: 30px;
+.inputs input {
+    display: flex;
+    margin-bottom: 0.7rem;
+    padding: 0.6rem 1rem;
+    width: 17rem;
+
+    font: 500 0.8rem 'Poppins', sans-serif;
+    letter-spacing: 1px;
+    border: 1px solid #201b1b;
+    border-radius: 4px;
+    transition: background 0.6s;
 }
 
-#new-password {
-    position: absolute;
-    margin: 20px 0 15px 160px;
-    font: 500 13px 'Montserrat', sans-serif;
-    color: #000000;
+.inputs input:hover {
+    background: #d4d3d3;
+    color: #FFFFFF;
+    border-color: #FFFFFF;
+}
+
+.links {
+    margin: 1.5rem;
+    font: 700 0.8rem 'DM Sanss', sans-serif;
+} 
+
+.new-password {
+    display: inline-block;
+    margin-left: 10rem;
+}
+
+.new-account {
+    margin-top: 0.5rem;
+    display: inline-block;
 }
 
 button {
-    margin: 70px 0 0 92px;
-    width: 120px;
-    height: 40px;
+    width: 17rem;
+    height: 2rem;
 
     font: 600 15px 'Raleway', sans-serif;
 
     background: #1b1b1b;
     color: #FFFFFF;
-    border-radius: 7px;
+    border: 1px solid;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 button:hover {
@@ -53,30 +74,31 @@ button:hover {
     background: #000000;
 }
 
-#new-account {
-    margin: 40px 0 20px 20px; 
-    position: absolute;
-
-    font: 600 13px 'Montserrat', sans-serif;
-    color: #696969;
-}
-
-span {
-    color: #1B1B1B;
-}
-
 p {
-    margin: 80px 0 0 140px;
-
-    font: 800 15px 'Montserrat', sans-serif;
+    font: 900 1rem 'DM Sans', sans-serif;
+    letter-spacing: 1px;
+    margin: 2rem 0 0 0.5rem;
 }
 
-nav {
-    margin: 40px 0 20px 70px;
+/* FOOTER */
+
+footer {
+    margin: 2rem;
+    transition:  0.10s;
 }
 
-.img {
-    padding-right: 10px;
-    width: 50px;
-    height: 40px;
+footer img {
+    padding: 0.4rem;
+}
+
+footer img:hover {
+    transform: translateY(-5px);
+}
+
+/* PHONE */
+
+@media (max-width: 400px) {
+    .links .new-password {
+        margin-left: 1rem;
+    }
 }
